# near-witgen-template

./: .gitignore  Cargo.toml  README.md  build.sh  dev-deploy.sh  package.json  test.ts
dummy_witgen/: Cargo.toml
dummy_witgen/src/: lib.rs
src/: lib.rs
ts/: contract.wit  sdk.wit
ts/contract/: index.ts
